--- a/CSS3/3-selektroy-psedoklas/css/style.css
+++ b/CSS3/3-selektroy-psedoklas/css/style.css
@@ -5,3 +5,20 @@
     border: 5px solid green;
     background-color: greenyellow;
 }
+.customer {
+    color: orange;
+}
+
+.customer:first-child {
+    color: greenyellow;
+}
+
+.customer:nth-child(4){
+    background-color: indigo;
+}
+.customer:nth-last-child(2){
+    background-color: lawngreen;
+}
+.customer:nth-child(3n+1){
+    background-color: red;
+}
