--- a/CSS3/4-selektroy-atrybutu/css/style.css
+++ b/CSS3/4-selektroy-atrybutu/css/style.css
@@ -20,3 +20,9 @@
     color: indigo;
     background-color: lawngreen;
 }
+nav > ul > li > a [title*="oll"] {
+    background-color: lightcoral;
+}
+nav > ul > li > a [title*="oll"]:hover {
+    background-color: yellow;
+}
